--- a/views/user/layout/footer.ejs
+++ b/views/user/layout/footer.ejs
@@ -176,7 +176,7 @@
       </div>
   </div>
   <div class="copy">
-      <div class="row">
+      <div class="">
           <div class="col-sm-12 text-center">
               <p>
                   <span>
