--- a/views/user/layout/header.ejs
+++ b/views/user/layout/header.ejs
@@ -199,16 +199,10 @@ html, body {
 				<a class="nav-link active" aria-current="page" href="/">Home</a>
 			</li>
 			<li class="nav-item dropdown my-auto">
-				<a class="nav-link " href="#" id="">Men</a>
+				<a class="nav-link " href="/product %>" id="">Shop</a>
 			</li>
 			<li class="nav-item my-auto">
-				<a class="nav-link small" href="women.html">Women</a>
-			</li>
-			<li class="nav-item my-auto">
-				<a class="nav-link small" href="about.html">About</a>
-			</li>
-			<li class="nav-item my-auto">
-				<a class="nav-link small" href="contact.html">Contact</a>
+				<a class="nav-link " href="/about">About</a>
 			</li>
 		</ul>
 		<ul class="navbar-nav">
