--- a/views/user/layout/footer.ejs
+++ b/views/user/layout/footer.ejs
@@ -182,7 +182,7 @@
                   <span>
                       Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
                   </span>
-                  <span class="block">SolMate <a href="http://unsplash.co/" target="_blank">@Rinshid</a> </span>
+                  <span class="block">SolMate <a href="/about" target="_blank">@Rinshid</a> </span>
               </p>
           </div>
       </div>
