--- a/views/auth/layouts/header.ejs
+++ b/views/auth/layouts/header.ejs
@@ -17,9 +17,9 @@
         </div> -->
         <div class="container">
           <a class="navbar-brand logo mx-3 text-secondary" href="/">SolMate</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-label="Toggle navigation"> -->
+            <!-- <span class="navbar-toggler-icon"></span> -->
+          <!-- </button> -->
         </div>        
 
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
@@ -41,8 +41,6 @@
             </ul>
             <!-- Left links -->
         </div>
-
-        <hr  class="p-3 shadow">
     </nav>
  
 
