--- a/views/user/layout/footer.ejs
+++ b/views/user/layout/footer.ejs
@@ -141,6 +141,7 @@
 }
 
     </style>
+    <hr class="">
 <footer id="colorlib-footer" role="contentinfo">
   <div class="container">
       <div class="row row-pb-md">
