--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -296,6 +296,8 @@
                                     });
                                 })
                             }
+                            window.location.href = document.URL;
+
                         }
                         
                     })
