--- a/views/user/layout/footer.ejs
+++ b/views/user/layout/footer.ejs
@@ -15,10 +15,10 @@
        $('.zoom').mouseenter(function() {
     $(this).elevateZoom({
       cursor: 'crosshair',
-      zoomWindowWidth: 250, 
-      zoomWindowHeight: 250,
+      zoomWindowWidth: 270, 
+      zoomWindowHeight: 270,
       zoomWindowOffetx: 100,
-      zoomLevel: .8,
+      zoomLevel: 1,
     });
   }).mouseleave(function() {
     $(this).removeData('elevateZoom');
