--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -48,7 +48,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-7 col-md-7">
-              <div id="colorlib-logo"><a href="/">Footwear</a></div>
+              <div id="colorlib-logo"><a href="/">SolMate</a></div>
             </div>
             <div class="col-sm-3 col-md-3 mt-3">
               <form  class="search-wrap">
