--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -387,7 +387,7 @@
                     </li>
                     
                   </ul>
-                  <div class="tab-content" id="pills-tabContent">
+                  <div class="tab-content mb-3" id="pills-tabContent">
                     <div class="tab-pane border fade show active" id="pills-description" role="tabpanel" aria-labelledby="pills-description-tab">
                       <div class="container">
                         <div class="row">
