--- a/views/admin/dashBoard.ejs
+++ b/views/admin/dashBoard.ejs
@@ -77,8 +77,8 @@
                 <tr>
                   <td><%= i+1 %></td>
                   <td><%= orders[i]?.order_date?.toLocaleDateString() %></td>
-                  <td><%= orders[i].user.username %></td>
-                  <td><%= orders[i].order_status %></td>
+                  <td><%= orders[i]?.user.username %></td>
+                  <td><%= orders[i]?.order_status %></td>
                 </tr>
               <% } %>
     </tbody>
