product bug fixed

--- a/views/admin/layout/header.ejs
+++ b/views/admin/layout/header.ejs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SolMate</title>
+  <link rel="stylesheet" href="public\images\img_bg_1.jpg">
  
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/5caf998115.js" crossorigin="anonymous"></script>
