--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -160,7 +160,7 @@
       <div id="imageCards" class="row">
         <div class="col-5 col-md-5 col-lg-5 col-xl-5 ">
           <div class="card my-2 px-2 py-2 mx-2" style="width: 100%;">
-            <img id="cropped-image0" src="<%= stock.image[0].url %>" class="card-img-top" alt="https://infinitebook.com/wp-content/uploads/woocommerce-placeholder-350x350.png">
+            <img id="cropped-image0" src="<%= stock?.image[0]?.url %>" class="card-img-top" alt="https://infinitebook.com/wp-content/uploads/woocommerce-placeholder-350x350.png">
             <div class="card-body d-flex justify-content-between">
               <div class="form-group">
                 <input
