--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -171,7 +171,7 @@
           <%categories.forEach((category)=>{%>
           <div class="col-sm-6 text-center">
             <div class="featured">
-              <a href="/product/?category=<%= [category._id.toString()] %>" class="featured-img d-flex align-items-center justify-content-center bg-image bg-image-cover" style="background-image: url('<%=category.image[0].url%>');">
+              <a href="/product/?category=<%= [category._id.toString()] %>" class="featured-img d-flex align-items-center justify-content-center bg-image bg-image-cover" style="background-image: url('<%=category.image[0]?.url%>');">
                 <h1 class="text-light"><%=category.name%></h1>
               </a>
               <div class="desc">
@@ -196,7 +196,7 @@
           <div class="col-lg-3 mb-4 text-center">
             <div class="product-entry border">
               <a href="#" class="prod-img">
-                <img src="<%=product.image[0].url%>" class="img-fluid" alt="Free html5 bootstrap 4 template">
+                <img src="<%=product.image[0]?.url%>" class="img-fluid" alt="Free html5 bootstrap 4 template">
               </a>
               <div class="desc">
                 <h2><a href="#"><%=product.name%></a></h2>
