--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -165,7 +165,7 @@
           <% products.forEach(item => { %>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="<%= item.image[0].url %>" class="card-img-top" alt="">
+              <img src="<%= item.image[0]?.url %>" onerror="this.onerror=null; this.src='images/loader.gif';" class="card-img-top" alt="">
               <div class="card-body">
                 <h5 class="card-title"><%= item.name %></h5>
                 <p class="card-text">&#x20B9;<%= item.price %></p>
