--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -255,7 +255,7 @@
                     <div class="carousel-item <%= index === 0 ? 'active' : '' %> zoom-container zoomWindowContainer">
                       <div class="product-entry border  product-image-container">
                         <a href="#" class="prod-img">
-                          <img id="productImage" src="<%= image.url %>" onerror="this.onerror=null; this.src='images/loader.gif';" class="img-fluid custom-carousel-image zoom image-fluid image-contained" alt="Product Image" />
+                          <img id="productImage" src="<%= image?.url %>" onerror="this.onerror=null; this.src='images/loader.gif';" class="img-fluid custom-carousel-image zoom image-fluid image-contained" alt="Product Image" />
                         </a>
                       </div>
                     </div>
