--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -196,7 +196,7 @@
           <div class="col-lg-3 mb-4 text-center">
             <div class="product-entry border">
               <a href="#" class="prod-img">
-                <img src="<%=product.image[0]?.url%>" onerror="this.onerror=null; this.src='images/loader.gif';" class="img-fluid" alt="url(images\loader.gif);">
+                <img src="<%=product.image[0]?.url%>" onerror="this.onerror=null; this.src='images/loader.gif';" class="img-fluid max-height-100" alt="url(images\loader.gif);">
               </a>
               <div class="desc">
                 <h2><a href="#"><%=product.name%></a></h2>
