--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -199,7 +199,7 @@
                 <img src="<%=product.image[0]?.url%>" onerror="this.onerror=null; this.src='images/loader.gif';" class="img-fluid max-height-100" alt="url(images\loader.gif);">
               </a>
               <div class="desc">
-                <h2><a href="#"><%=product.name%></a></h2>
+                <h2><a href="/product/shop?id=<%= product._id %>"><%=product.name%></a></h2>
                 <span class="price"><%=product.price%></span>
               </div>
             </div>
