--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -5,6 +5,7 @@
   <title>SolMate</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="images\img_bg_1.jpg">
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,700" rel="stylesheet">
@@ -200,7 +201,7 @@
               </a>
               <div class="desc">
                 <h2><a href="/product/shop?id=<%= product._id %>"><%=product.name%></a></h2>
-                <span class="price"><%=product.price%></span>
+                <span class="price">$<%=product.price%></span>
               </div>
             </div>
           </div>
