--- a/views/admin/layout/header.ejs
+++ b/views/admin/layout/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SolMate</title>
-  <link rel="stylesheet" href="images\img_bg_1.jpg">
+  <link rel="icon" href="images\img_bg_1.jpg" type="image/png">
  
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/5caf998115.js" crossorigin="anonymous"></script>
