--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -1,6 +1,10 @@
 <%- include("./layout/header") %>
-
-<div class="container-fluid">
+<style>
+  .full-height {
+    height: 100vh;
+}
+</style>
+<div class="container-fluid full-height">
   <!-- <div class="input-group mt-5 mb-5">
     <input type="search" name="search" class="form-control" placeholder="Search">
     <button type="submit" class="btn btn-dark">Search</button>
