--- a/views/admin/dashBoard.ejs
+++ b/views/admin/dashBoard.ejs
@@ -1,12 +1,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <%-include("./layout/header")%>
-<style>
-  .full-height {
-    height: 100vh;
-}
-</style>
-<section class="full-height" >
+
+<section class="" >
 <div class="row mt-3 ml-lg-4 m-2">
   <div class="col-lg-5 col-md-10 mb-3">
     <div class="row">
