--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -1,10 +1,6 @@
 <%- include("./layout/header") %>
-<style>
-  .full-height {
-    height: 100vh;
-}
-</style>
-<div class="col-10 full-height">
+
+<div class="col-10">
   <div class="table-scrollable d-flex justify-content-center align-items-center">
     <div class="table-responsive m-5 w-100" style="max-height: 400px; overflow-y: auto;">
       <table class="table table-light table-striped table-bordered">
