--- a/views/admin/layout/header.ejs
+++ b/views/admin/layout/header.ejs
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <section>
+  <section style="height: 100vh;">
     <div class="d-flex shadow-lg">
       <div class="col-2 ">
         <div class="d-flex flex-column justify-content-between bg-light  " style=" position: sticky; top: 0;" id="sidebar">
